# bim-env

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  __init__.py  client.py  gym_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  smoke_gym.py  smoke_train.py  train.py
server/: __init__.py  app.py  bim_env_environment.py
